--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "post-upgrade": "npx projen post-upgrade",
     "pre-compile": "npx projen pre-compile",
     "test": "npx projen test",
-    "test:update": "npx projen test:update",
     "test:watch": "npx projen test:watch",
     "upgrade": "npx projen upgrade",
     "watch": "npx projen watch",
@@ -30,10 +29,13 @@
     "jest": "^29.2.2",
     "jest-junit": "^13",
     "json-schema": "^0.4.0",
-    "npm-check-updates": "^15",
+    "npm-check-updates": "^16",
     "projen": "^0.65.12",
     "ts-jest": "^29.0.3",
     "typescript": "^4.8.4"
+  },
+  "dependencies": {
+    "@diranged/jsii3000-coremodule-example": "*"
   },
   "license": "Apache-2.0",
   "version": "0.0.0",
